fix slideshow text content spacing and navigation position when resizing

--- a/assets/component-slideshow.css
+++ b/assets/component-slideshow.css
@@ -41,6 +41,22 @@ slideshow-component {
   .banner--mobile-bottom .slideshow__text.banner__box {
     max-width: 100%;
   }
+
+  .banner--mobile-bottom .slideshow__text-wrapper {
+    flex-grow: 1;
+  }
+
+  .banner--mobile-bottom .slideshow__text.banner__box {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: center;
+  }
+
+  .banner--mobile-bottom .slideshow__text .button {
+    flex-grow: 0;
+  }
+
 }
 
 .banner:not(.banner--mobile-bottom) .slideshow__text-wrapper {
